# pydantic-mcp

./: .gitignore  docling_test.py  example2-4.py  example2.py  gemini-browser-use.py  main.py  models.py  output.md  pyproject.toml  talk2mcp2.py
