[project]
name = "pydantic-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use[memory]>=0.1.40",
    "docling>=2.30.0",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.167.0",
    "google-auth-oauthlib>=1.2.1",
    "google-genai>=1.11.0",
    "langchain-google-genai>=2.1.3",
    "mcp[cli]>=1.6.0",
    "pillow>=11.2.1",
    "pywinauto>=0.6.9",
]
